<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGray"
    tools:context="id.co.vileo.my_bus.Fragment.HomeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:padding="10dp"
        android:background="@drawable/box_bottom_shadow"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/layout_login_sign_up">

        <TextView
            android:id="@+id/login_or_signup"
            android:layout_marginTop="20dp"
            android:text="@string/login_or_signup"
            android:textSize="12dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="horizontal"
            android:paddingLeft="15.0dip"
            android:paddingTop="5.0dip"
            android:paddingRight="15.0dip"
            android:paddingBottom="1.0dip"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_or_signup">

            <Button
                android:id="@+id/login"
                android:textColor="@color/colorWhite"
                android:layout_width="0.0dip"
                android:layout_marginRight="15dp"
                android:layout_height="match_parent"
                android:background="@drawable/btn_default"
                android:layout_weight="1.0"
                android:text="@string/login" />

            <Button
                android:id="@+id/sign_up"
                android:textColor="@color/colorWhite"
                android:layout_marginLeft="15dp"
                android:background="@drawable/btn_primary"
                android:layout_width="0.0dip"
                android:layout_height="match_parent"
                android:text="@string/sign_up"
                android:layout_weight="1.0" />

        </LinearLayout>

    </RelativeLayout>

    <ScrollView
        android:id="@+id/ScrollView01"
        android:layout_below="@+id/layout_login_sign_up"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/layout_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/layout_my_pay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12dp"
                    android:padding="2dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="5dp"
                    android:id="@+id/textview_my_pay"
                    android:text="@string/my_pay"/>

                <RelativeLayout
                    android:id="@+id/point_my_pay"
                    android:clickable="true"
                    android:layout_below="@+id/textview_my_pay"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/relative_layout_selector"
                    android:padding="15dip" >

                    <LinearLayout android:id="@+id/thumbnail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="3dip"
                        android:layout_alignParentLeft="true"
                        android:layout_marginRight="5dip">

                        <ImageView
                            android:id="@+id/list_image"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/point"/>
                    </LinearLayout>

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@+id/thumbnail"
                        android:layout_toRightOf="@+id/thumbnail"
                        android:text="Point Saya"
                        android:textColor="@color/colorGray"
                        android:typeface="sans"
                        android:textSize="12dip"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/artist"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/title"
                        android:textSize="8dip"
                        android:textColor="@color/colorGray"
                        android:layout_marginTop="1dip"
                        android:layout_toRightOf="@+id/thumbnail"
                        android:text="Kumpulkan dan tukarkan Point untuk Travelling lebih murah" />

                    <ImageView android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/lock"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"/>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/mycard_my_pay"
                    android:layout_below="@+id/point_my_pay"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/li_selector"
                    android:padding="15dip" >

                    <LinearLayout android:id="@+id/thumbnail2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="3dip"
                        android:layout_alignParentLeft="true"
                        android:layout_marginRight="5dip">

                        <ImageView
                            android:id="@+id/list_image2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/card"/>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/title2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@+id/thumbnail2"
                        android:layout_toRightOf="@+id/thumbnail2"
                        android:text="Kartu Saya"
                        android:textColor="@color/colorGray"
                        android:typeface="sans"
                        android:textSize="12dip"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/artist2"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/title2"
                        android:textSize="8dip"
                        android:textColor="@color/colorGray"
                        android:layout_marginTop="1dip"
                        android:layout_toRightOf="@+id/thumbnail2"
                        android:text="Bayar Pesanan untuk satu kali ketuk" />

                    <ImageView android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/lock"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"/>
                </RelativeLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_other"
                android:layout_below="@+id/layout_my_pay"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12dp"
                    android:padding="2dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="5dp"
                    android:id="@+id/textview_other"
                    android:text="@string/other"/>

                <RelativeLayout
                    android:id="@+id/other_help"
                    android:clickable="true"
                    android:layout_below="@+id/textview_other"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/relative_layout_selector"
                    android:padding="15dip" >

                    <LinearLayout android:id="@+id/thumbnail3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="3dip"
                        android:layout_alignParentLeft="true"
                        android:layout_marginRight="5dip">

                        <ImageView
                            android:id="@+id/list_image3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/point"/>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/title3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@+id/thumbnail3"
                        android:layout_toRightOf="@+id/thumbnail3"
                        android:text="Pusat Bantuan"
                        android:textColor="@color/colorGray"
                        android:typeface="sans"
                        android:textSize="12dip"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/artist3"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/title3"
                        android:textSize="8dip"
                        android:textColor="@color/colorGray"
                        android:layout_marginTop="1dip"
                        android:layout_toRightOf="@+id/thumbnail3"
                        android:text="Temukan jawaban terbaik dari pertanyaan anda" />


                    <ImageView android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/arrow"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"/>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/other_refund"
                    android:clickable="true"
                    android:layout_below="@+id/other_help"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/relative_layout_selector"
                    android:padding="15dip" >

                    <!--  ListRow Left sied Thumbnail image -->
                    <LinearLayout android:id="@+id/thumbnail4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="3dip"
                        android:layout_alignParentLeft="true"
                        android:layout_marginRight="5dip">

                        <ImageView
                            android:id="@+id/list_image4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/card"/>

                    </LinearLayout>

                    <!-- Title Of Song-->
                    <TextView
                        android:id="@+id/title4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@+id/thumbnail4"
                        android:layout_toRightOf="@+id/thumbnail4"
                        android:text="Refund Saya"
                        android:textColor="@color/colorGray"
                        android:typeface="sans"
                        android:textSize="12dip"
                        android:textStyle="bold"/>

                    <!-- Artist Name -->
                    <TextView
                        android:id="@+id/artist4"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/title4"
                        android:textSize="8dip"
                        android:textColor="@color/colorGray"
                        android:layout_marginTop="1dip"
                        android:layout_toRightOf="@+id/thumbnail4"
                        android:text="Atur refund Anda di satu tempat" />

                    <!-- Rightend Arrow -->
                    <ImageView android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/lock"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"/>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/other_notif"
                    android:clickable="true"
                    android:layout_below="@+id/other_refund"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/relative_layout_selector"
                    android:padding="15dip" >

                    <!--  ListRow Left sied Thumbnail image -->
                    <LinearLayout android:id="@+id/thumbnail5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="3dip"
                        android:layout_alignParentLeft="true"
                        android:layout_marginRight="5dip">

                        <ImageView
                            android:id="@+id/list_image5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/card"/>

                    </LinearLayout>

                    <!-- Title Of Song-->
                    <TextView
                        android:id="@+id/title5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@+id/thumbnail5"
                        android:layout_toRightOf="@+id/thumbnail5"
                        android:text="Notifikasi Push"
                        android:textColor="@color/colorGray"
                        android:typeface="sans"
                        android:textSize="12dip"
                        android:textStyle="bold"/>

                    <!-- Artist Name -->
                    <TextView
                        android:id="@+id/artist5"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/title5"
                        android:textSize="8dip"
                        android:textColor="@color/colorGray"
                        android:layout_marginTop="1dip"
                        android:layout_toRightOf="@+id/thumbnail5"
                        android:text="Selalu dapat update dari My Bus" />

                    <!-- Rightend Arrow -->
                    <ImageView android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/lock"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"/>

                </RelativeLayout>

            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>